# factory

./: README.md  factory.cabal  stack.yaml
executable/: Main.hs
