name: factory
version: 1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak <taylor@fausak.me>
synopsis: An example Servant API.
description:
    <https://github.com/tfausak/factory#readme>
category: Web
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/tfausak/factory

library
    exposed-modules:
        Factory
        Factory.API
        Factory.API.MIME
        Factory.Database
        Factory.Haskell
        Factory.JavaScript
        Factory.Markdown
        Factory.Server
        Factory.Types.Widget
    build-depends:
        aeson >=0.8 && <0.9,
        base >=4.8 && <4.9,
        bytestring >=0.10 && <0.11,
        either >=4.4 && <4.5,
        http-media >=0.6 && <0.7,
        safe >=0.3 && <0.4,
        servant >=0.4 && <0.5,
        servant-client >=0.4 && <0.5,
        servant-docs >=0.4 && <0.5,
        servant-jquery >=0.4 && <0.5,
        servant-server >=0.4 && <0.5,
        stm >=2.4 && <2.5,
        text >=1.2 && <1.3,
        transformers >=0.4 && <0.5,
        wai >=3.0 && <3.1,
        warp >=3.1 && <3.2
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

executable factory
    main-is: Main.hs
    build-depends:
        base -any,
        factory -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

